--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "php": "^8.0.2",
     "ahmadmayahi/php-google-vision": "^1.0",
     "barryvdh/laravel-dompdf": "^2.0",
+    "doctrine/dbal": "^3.5",
     "fruitcake/laravel-cors": "^2.0.5",
     "google/cloud-vision": "^1.6",
     "guzzlehttp/guzzle": "^7.2",
@@ -19,6 +20,7 @@
     "laravel/tinker": "^2.7",
     "matthewbdaly/laravel-azure-storage": "^2.0",
     "netflie/whatsapp-cloud-api": "^1.3",
+    "spatie/laravel-backup": "^8.1",
     "spatie/laravel-permission": "^5.7"
   },
   "require-dev": {
